[workspace]
members = ["dev/cmp"]

[package]
name = "lewton"
version = "0.10.1"
authors = ["est31 <MTest31@outlook.com>"]
description = "Pure Rust vorbis decoder"
license = "MIT OR Apache-2.0"
repository = "https://github.com/RustAudio/lewton"
keywords = ["ogg", "vorbis", "decoder", "audio"]
categories = ["compression", "multimedia::audio", "multimedia::encoding"]
documentation = "https://docs.rs/lewton"
readme = "README.md"
edition = "2018"

[features]
default = ["ogg"]
async_ogg = ["ogg", "ogg/async", "futures", "tokio"]

[[example]]
name = "perf"
required-features = ["ogg"]

[[example]]
name = "player"
required-features = ["ogg"]

[dependencies]
byteorder = "1.0"
tinyvec = { version = "0.3.2", features = ["alloc"] }
ogg = { version = "0.7", optional = true }
tokio = { version = "0.2", optional = true }
futures = { version = "0.3", optional = true }

[dev-dependencies]
ogg = "0.7"
alto = "3"

[patch.crates-io]
ogg = { git = "https://github.com/panicbit/ogg", branch = "futures_03" }

[package.metadata.docs.rs]
features = ["async_ogg"]

[lib]
name = "lewton"
